backend-app/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  namespace: default
  labels:
    app: web-backend-module
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web-backend-module
  template:
    metadata:
      labels:
        app: web-backend-module
    spec:
      containers:
        - name: web-backend-module
          image: nginx
          ports:
            - containerPort: 80
