backend-app/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-backend-module
  namespace: default 
  labels:
    app: web-backend-module
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
  selector:
    app: web-backend-module
